# rtc_server

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  build.ps1  build.sh  env-msvc.sh  main.cpp  test.1.txt  test.2.txt  test.264  test.txt  vcpkg.json
document/: rtc_server 流程梳理.xmind  设计文档.md
include/rtc/: websocketserver.hpp
lib/t113_i/: libdatachannel.so.0.23
lib/win/release/: datachannel.lib
src/: CMakeLists.txt
src/base/: Base.cpp  Base.h  CMakeLists.txt  PlatformCompat.h
src/encoder/: CMakeLists.txt
src/encoder/linux/: CMakeLists.txt
src/encoder/pc/: CMakeLists.txt  Encoder.cpp  Encoder.h
src/encoder/t536/: CMakeLists.txt  Encoder.cpp  Encoder.h
src/event/: CMakeLists.txt  Event.cpp  Event.h
src/klippy/: CMakeLists.txt  Klipper.cpp  Klipper.h  KlipperCommand.cpp  KlipperCommand.h
src/media/: CMakeLists.txt  MediaSource.cpp  MediaSource.h  V4l2MediaSource.cpp  V4l2MediaSource.h
src/media/v4l2/: CMakeLists.txt
src/media/win/: CMakeLists.txt  WinCapMediaSource.cpp  WinCapMediaSource.h
src/nozzlecalib/: CMakeLists.txt  nozzlecalib.cpp  nozzlecalib.h
src/poller/: CMakeLists.txt  Poller.cpp  Poller.h  SelectPoller.cpp  SelectPoller.h
src/poller/select/: CMakeLists.txt  SelectPoller.cpp  SelectPoller.h
src/rtp/: CMakeLists.txt  H264RtpSink.cpp  H264RtpSink.h  Rtp.h  RtpSink.cpp  RtpSink.h
src/rtp/h264/: CMakeLists.txt  H264RtpSink.cpp  H264RtpSink.h
src/scheduler/: CMakeLists.txt  Scheduler.cpp  Scheduler.h
src/share/: CMakeLists.txt  RtcPacket.h
src/threadpool/: CMakeLists.txt  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h
src/timer/: CMakeLists.txt  Timer.cpp  Timer.h
src/timer/linux/: CMakeLists.txt  TimerManager.cpp  TimerManager.h
src/timer/win/: CMakeLists.txt  TimerManager.cpp  TimerManager.h
src/utils/: CMakeLists.txt  inet.h  rtc_utils.cpp  rtc_utils.h
src/v4l2/: CMakeLists.txt  V4l2.cpp  V4l2.h
src/webrtc/: CMakeLists.txt  Webrtc.cpp  Webrtc.h
test/: CMakeLists.txt
test/rtp/: CMakeLists.txt  rtpsinktest.cpp
test/threadpool/: CMakeLists.txt  threadpooltest.cpp
test/timer/: CMakeLists.txt
test/timer/linux/: CMakeLists.txt  linuxtimer.cpp
test/timer/win/: CMakeLists.txt  wintimer.cpp
test/winMedia/: CMakeLists.txt  winMedia.cpp
toolchain/: pc.cmake  t113_i.cmake  t536.cmake  x2600.cmake
