# add_subdirectory(event)
add_subdirectory(base)
# add_subdirectory(encoder)
# add_subdirectory(share)
# add_subdirectory(media)
# add_subdirectory(poller)
# add_subdirectory(rtp)
# add_subdirectory(scheduler)
add_subdirectory(threadpool)
add_subdirectory(media)
# add_subdirectory(timer)
# add_subdirectory(v4l2)
# add_subdirectory(klippy)
# add_subdirectory(webrtc)
add_subdirectory(utils)