add_subdirectory(event)
add_subdirectory(base)
add_subdirectory(encoder)
# add_subdirectory(share)
if(NOT WIN32)
    add_subdirectory(poller)
    add_subdirectory(v4l2)
endif()

add_subdirectory(rtp)
# add_subdirectory(scheduler)
add_subdirectory(threadpool)
add_subdirectory(media)
add_subdirectory(timer)

# add_subdirectory(webrtc)
add_subdirectory(utils)
